# MinefieldCPP

./: CMakeLists.txt  README.md
lib/: board-minefield.h  board-player.h  board.h  game.h  player-move.h  ui-game.h  utils.h
scripts/: debug.sh  start.sh
src/: board-minefield.cpp  board-player.cpp  game.cpp  index.cpp  player-move.cpp  ui-game.cpp  utils.cpp
